--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -28,7 +28,7 @@
 
 .nav-menu{
     display: grid;
-    grid-template-columns: repeat(6, auto);
+    grid-template-columns: repeat(5, auto);
     grid-gap: 10px;
     list-style: none;
     align-items: center;
@@ -37,6 +37,7 @@
     padding-right: 150px;
     color: #ffffff;
 }
+
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 .nav-links{
 
@@ -84,12 +85,11 @@
         position: fixed;
         top: 0;
         right: -110%;
-        align-items: stretch;
+        /* align-items: stretch; */
         padding: 88px 0 30px 0;
         margin: 0;
-        z-index: -1;
+        z-index: -4;
         transition: 0.5s ease-in-out;
-        backdrop-filter: blur(10px); /* Add backdrop filter here */
     }
     
     .nav-menu.active {
